--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+.DS_Store
 node_modules
 
 # env file
@@ -6,3 +8,9 @@ node_modules
 # lock files
 package-lock.json
 yarn.lock
+
+# build folder
+dist
+
+# log file
+npm-debug.log
