--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "node-express-ts-example",
   "version": "1.0.0",
   "description": "node-express-typescript API example",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,5 +31,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
