--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.3.0"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.4.4"
   },
   "engines": {
     "node": "16.x"
