--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "npm run tsc",
-    "start": "node .",
+    "start": "node dest/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,12 +25,12 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.4",
     "nodemon": "^2.0.13",
-    "ts-node": "^10.3.0"
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "typescript": "^4.4.4"
+    "express": "^4.17.1"
   },
   "engines": {
     "node": "16.x"
