--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run tsc",
     "start": "node ./dist/index.js",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "node",
@@ -23,8 +23,13 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.4",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.2.5",
     "nodemon": "^2.0.13",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
