--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/supertest": "^2.0.11",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
     "jest": "^27.2.5",
     "nodemon": "^2.0.13",
     "supertest": "^6.1.6",
